--- a/page2.html
+++ b/page2.html
@@ -75,26 +75,41 @@
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <img class="img-fluid photo-page2" src="picture/mechanics.png" style="padding-bottom: 40px;" />
                             <h4 class="medium-poppins">Mechanics</h4>
-                            <p class="poppins-new" style="text-align:justify;">The mechanics group handles the physical parts of the robot. This includes tasks such as chasis design, trash collection system, and the mobility of the robot. This group also handles prototyping to testing. </p>
+                            <p class="poppins-new" style="text-align:justify-all;">The mechanics group handles the physical parts of the robot. </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <img class="img-fluid photo-page2"src="picture/electronics.png" style=" padding-bottom: 40px;" />
                             <h4 class="medium-poppins">Electronics</h4>
-                             <p class="poppins-new" style="text-align:justify;"> The electronics group handles the connection between software and hardware of the robot. This includes tasks such as, managing motor controls, ensuring power distribution, and designing circuit boards. </p>
+                             <p class="poppins-new" style="text-align:justify-all;"> The electronics group handles the connection between software and hardware of the robot. </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <img class="img-fluid photo-page2" src="picture/software.png" style="   padding-bottom: 40px;" />
                             <h4 class="medium-poppins">Software</h4>
-                             <p class="poppins-new" style="text-align:justify;">The software group handles the movements of the robot by programming its behavior using Arduino. This includes writing and debugging code to control the robot’s functions and integrating the software with the hardware.  </p>
+                             <p class="poppins-new" style="text-align:justify-all;">The software group handles the movements of the robot by programming its behavior using Arduino. </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+    </div>
+    <div style="background-color:#f5f5f5 ;"><
+    <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <h1 class=" poppins-thick black" style ="padding-bottom: 40px;"> 1. Mechanics </h1>
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0 photo-page2" src="picture/old feeder.jpg" alt="..." /></div>
+                        <div class="col-lg-6">
+                            <h3 class="poppins-medium"> Trash Collection System </h3>
+                            <p class="mb-0 poppins-new"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
     </div>
 </body>
 
