--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
                 <div class="row">
                      <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <img class="img-fluid photo-page2"src="picture/sustainable.png" style="padding-bottom: 40px;" />
+                            <img class="img-fluid photo-size2"src="picture/sustainable.png" style="padding-bottom: 40px;" />
                             <h4 class="poppins-medium">Focusing on Sustainability</h4>
                              <p class="poppins-new" style="text-align:justify;"> The initiation of this project was to complement SUTD’s inherent culture and emphasis on sustainability. SAND-E is made mostly of recycled or 3D printed parts, excluding the electronics.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <img class="img-fluid photo-page2"src="picture/robothand.png" style="padding-bottom: 40px;" />
+                            <img class="img-fluid photo-size2"src="picture/robothand.png" style="padding-bottom: 40px;" />
                             <h4 class="poppins-medium">Reducing Physical Strength</h4>
                              <p class="poppins-new" style="text-align:justify;">  This project was taken up to reduce the physical strain experienced by our cleaners everyday, by automating the process.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                            <img class="img-fluid photo-page2" src="picture/lightbulb.png" style="padding-bottom: 40px;" />
+                            <img class="img-fluid photo-size2" src="picture/lightbulb.png" style="padding-bottom: 40px;" />
                             <h4 class="poppins-medium"> Desire to Always be Innovative</h4>
                              <p class="poppins-new" style="text-align:justify;">This project is an evolution of the first prototype, driven by a strong desire to innovate </p>
                         </div>
