--- a/page2.html
+++ b/page2.html
@@ -65,7 +65,7 @@
             </div>
             </section>
 
-    <div style="background-color:#e5f6f7 ">
+    <div style="background-color:#e5f6f7">
             <section class="features-icons text-center">
             <div class="container">
                 <h1 class="big-poppins" style=" padding-bottom: 40px">Groups</h1>
@@ -73,21 +73,21 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <img class="img-fluid photo-page2" src="picture/mechanics.png" style="padding-bottom: 40px;" />
+                            <img class="img-fluid photo-size2" src="picture/mechanics.png" style="padding-bottom: 40px;" />
                             <h4 class="medium-poppins">Mechanics</h4>
                             <p class="poppins-new" style="text-align:justify-all;">The mechanics group handles the physical parts of the robot. </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <img class="img-fluid photo-page2"src="picture/electronics.png" style=" padding-bottom: 40px;" />
+                            <img class="img-fluid photo-size2"src="picture/electronics.png" style=" padding-bottom: 40px;" />
                             <h4 class="medium-poppins">Electronics</h4>
                              <p class="poppins-new" style="text-align:justify-all;"> The electronics group handles the connection between software and hardware of the robot. </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                            <img class="img-fluid photo-page2" src="picture/software.png" style="   padding-bottom: 40px;" />
+                            <img class="img-fluid photo-size2" src="picture/software.png" style="   padding-bottom: 40px;" />
                             <h4 class="medium-poppins">Software</h4>
                              <p class="poppins-new" style="text-align:justify-all;">The software group handles the movements of the robot by programming its behavior using Arduino. </p>
                         </div>
@@ -96,21 +96,63 @@
             </div>
         </section>
     </div>
-    <div style="background-color:#f5f5f5 ;"><
+
+    <div style="background-color: white ;"><
     <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <h1 class=" poppins-thick black" style ="padding-bottom: 40px;"> 1. Mechanics </h1>
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0 photo-page2" src="picture/old feeder.jpg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/new feeder.jpg" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h3 class="poppins-medium"> Trash Collection System </h3>
-                            <p class="mb-0 poppins-new"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
+                            <h3 class="poppins-medium2"> Trash Collection System </h3>
+                            <p class="mb-0 poppins-new"> This system is a part of the robot that works in taking the trash from sand. This prototype was designed using fusion 360 and printed with bamboo 3d printer.</p>
                         </div>
                     </div>
                 </div>
             </div>
             </section>
     </div>
+
+    <div style="background-color:#f7f2c5 ">
+            <section class="features-icons text-center">
+            <div class="container">
+                <h1 class="big-poppins" style=" padding-bottom: 40px">Initial Designs</h1>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <img class="photo-size3" src="picture/old feeder.png" style="padding-bottom: 40px;" />
+                            <h4 class="medium-poppins">Feeder</h4>
+                            <p class="poppins-new" style="text-align:justify-all;">This design was picked and modified to weigh less to reduce filament usage. The middle part of the fan was also modified with zip ties to be more elastic</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <img class= "photo-size3" src="picture/scoop.png" style="padding-bottom: 40px;" />
+                            <h4 class="medium-poppins">Scoop</h4>
+                            <p class="poppins-new" style="text-align:justify-all;">This design was not used due to limited motor power  </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                            <img class="img-fluid photo-page2" src="picture/rotating brush.png" style="padding-bottom: 40px;" />
+                            <h4 class="medium-poppins">Rotating Brush </h4>
+                             <p class="poppins-new" style="text-align:justify-all;">The software group handles the movements of the robot by programming its behavior using Arduino. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/rakes.png" alt="..." /></div>
+                        <div class="col-lg-6">
+                            <p class="mb-0 poppins-new black"> To help the feeder pickup the trash, the rakes are modified with bigger scope</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 </body>
 
 </html>
