--- a/page2.html
+++ b/page2.html
@@ -42,8 +42,8 @@
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
-                                <h1 class="display-5 fw-bolder mb-2 poppins-thick black">Beach Cleaning Robot Project by Freshmore From SUTD</h1>
-                                <p class="lead fw-normal mb-4 poppins-medium black">This project combinines engineering creativity to create a machine to tackle environmental problems. Together, we're making a difference for a sustainable future. </p>
+                                <h1 class="display-5 fw-bolder mb-2 poppins-thick black">Sand-E Development Process</h1>
+                                <p class="lead fw-normal mb-4 poppins-medium black"> The step by step process involves designing, building, and refining a robot to achieve its intended function. It includes selecting the right mechanics, electronics, and implement good software</p>
                             </div>
                         </div>
                         <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"></div>
@@ -148,7 +148,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/rakes.png" alt="..." /></div>
                         <div class="col-lg-6">
-                            <p class="mb-0 poppins-new black"> To help the feeder pickup the trash, the rakes are modified with bigger scope</p>
+                            <p class="mb-0 poppins-new black"> To assist the feeder in picking up trash, the rakes have been modified to feature a larger scope. These rakes are 3D-printed using a bamboo 3D printer and PLA filament, ensuring they are both durable and eco-friendly. Once printed, the rakes are systematically attached in rows onto a conveyor belt. Each row consists of three rakes, optimizing the efficiency of the trash collection process.</p>
                         </div>
                     </div>
                 </div>
