--- a/page3.html
+++ b/page3.html
@@ -9,25 +9,41 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="css/styles.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="screen.css">
+     <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
  </head>   
-<body>
-     <header class="masthead custom-bgpage3">
-
-        <div class ="poppins-medium menu-spacing" style=" padding-right:80px ; text-align: right; color: white";>
-           <a href="index.html"> Home</a>
-           <a href="page2.html"> Progress</a>
-           <a href="page3.html">Team</a>
-           <a href="page4.html">Contact</a>
-            </div>
-            
-            <div class="poppins-thick3 padding1" style="padding-top: 100px;">
-                Introducing the Team !
+<body class="d-flex flex-column h-100">
+    <main class="flex-shrink-0">
+         <div class="custom-bg3">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container px-5">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item poppins-new"><a class="nav-link poppins med" href="index.html">Home</a></li>
+                            <li class="nav-item poppins-new"><a class="nav-link" href="page2.html"> Progress</a></li>
+                            <li class="nav-item poppins-new"><a class="nav-link" href="page3.html">Team</a></li>
+                            <li class="nav-item poppins-new"><a class="nav-link" href="page4.html">Contact</a></li>
+                            <li class="nav-item dropdown">
+                        </ul>
+                    </div>
                 </div>
-            <div class="poppins-new padding1" style="color: white;">
-                The group consists of blabla people that developed Sand-E from its original state
+            </nav>
+        <header class="py-5">
+                <div class="container px-5">
+                    <div class="row gx-5 align-items-center justify-content-center">
+                        <div class="col-lg-8 col-xl-7 col-xxl-6">
+                            <div class="my-5 text-center text-xl-start">
+                                <h1 class="display-5 fw-bolder text-white mb-2 poppins-thick" style="padding-top: 89px;"> Introducing The Team !</h1>
+                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium"> The group consists of 29 people</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"></div>
+                    </div>
                 </div>
-
-        </header>
+    </div>
+            </header>
+   
     <section class="testimonials text-center bg-light">
             <div class="row padding2" >
                     <div class="col-lg-4">
