--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
                                 <h1 class="display-5 fw-bolder text-white mb-2 poppins-thick">Beach Cleaning Robot Project by Freshmore From SUTD</h1>
-                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium">This project combinines engineering creativity to create a machine to tackle environmental problems. Together, we're making a difference for a sustainable future. </p>
+                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium" style=" padding-bottom: 80px">This project combinines engineering creativity to create a machine to tackle environmental problems. Together, we're making a difference for a sustainable future. </p>
                             </div>
                         </div>
                         <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"></div>
