--- a/page2.html
+++ b/page2.html
@@ -100,7 +100,7 @@
     <div style="background-color: white ;"><
     <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
-                    <h1 class=" poppins-thick black" style ="padding-bottom: 40px;"> 1. Mechanics </h1>
+                    <h1 class=" poppins-thick2 black" style ="padding-bottom: 40px;"> 1. Mechanics </h1>
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/new feeder.jpg" alt="..." /></div>
                         <div class="col-lg-6">
