--- a/page2.html
+++ b/page2.html
@@ -144,15 +144,23 @@
         </section>
     </div>
     <section class="py-5">
-                <div class="container px-5 my-5">
+               <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/rakes.png" alt="..." /></div>
+                        <div class="col-lg-6 order-first order-lg-last">
+                            <video autoplay muted loop playsinline controls style="width: 100%; height: auto;">
+                            <source src="video/video1.mp4" type="video/mp4">
+                            </video>
+                        </div>
                         <div class="col-lg-6">
-                            <p class="mb-0 poppins-new black"> To assist the feeder in picking up trash, the rakes have been modified to feature a larger scope. These rakes are 3D-printed using a bamboo 3D printer and PLA filament, ensuring they are both durable and eco-friendly. Once printed, the rakes are systematically attached in rows onto a conveyor belt. Each row consists of three rakes, optimizing the efficiency of the trash collection process.</p>
+                            <h3 class="poppins-medium2">Challenges</h3>
+                                <p class="mb-0 poppins-new black">
+                                To assist the feeder in picking up trash, the rakes have been modified to feature a larger scope. These rakes are 3D-printed using a bamboo 3D printer and PLA filament, ensuring they are both durable and eco-friendly. Once printed, the rakes are systematically attached in rows onto a conveyor belt. Each row consists of three rakes, optimizing the efficiency of the trash collection process.
+                                </p>
                         </div>
                     </div>
                 </div>
-            </section>
+    </section>
+
 </body>
 
 </html>
