--- a/page2.html
+++ b/page2.html
@@ -143,6 +143,7 @@
             </div>
         </section>
     </div>
+
     <section class="py-5">
                <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
@@ -154,12 +155,36 @@
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2">Challenges</h3>
                                 <p class="mb-0 poppins-new black">
-                                To assist the feeder in picking up trash, the rakes have been modified to feature a larger scope. These rakes are 3D-printed using a bamboo 3D printer and PLA filament, ensuring they are both durable and eco-friendly. Once printed, the rakes are systematically attached in rows onto a conveyor belt. Each row consists of three rakes, optimizing the efficiency of the trash collection process.
+                                - Feeder's fins were not long enough or shaped properly to take the trash <br>
+                                -Trash did not go up to the conveyer belt
                                 </p>
                         </div>
                     </div>
                 </div>
     </section>
+
+      <div style="background-color: white ;"><
+    <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <h1 class=" poppins-thick2 black" style ="padding-bottom: 40px;"> 1. Mechanics </h1>
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6">
+                           <video autoplay muted loop playsinline controls style="width: 100%; height: auto;transform: rotate(90deg);">
+                            <source src="video/video2.mp4" type="video/mp4">
+                            </video> 
+                        </div>
+                        <div class="col-lg-6">
+                            <h3 class="poppins-medium2"> Our Solution </h3>
+                            <p class="mb-0 poppins-new"> 
+                                - Modified the model of the fins to enable it to be attached with zipties that are flexible and long that allows easier trash collection. <br>
+                                - Modified the rakes to have a bigger scope and attached more 3 rakes in rows of conveyer belt.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
+    </div>
 
 </body>
 
