--- a/page2.html
+++ b/page2.html
@@ -55,7 +55,7 @@
          <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/old robot.jpg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/old robot.jpg" alt="..."  /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder poppins-medium"> Previous Model</h2>
                             <p class="mb-0 poppins-new"> Initially, the robot's mechanics utilized the same rake system with smaller sizes. For the trash collection system, a scoop was used to scrape trash from the sand. Additionally, the robot was not controlled via a controller but operated manually by being pushed. </p>
@@ -102,7 +102,7 @@
                 <div class="container px-5 my-5">
                     <h1 class=" poppins-thick2 black" style ="padding-bottom: 40px;"> 1. Mechanics </h1>
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/new feeder.jpg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0 my-padding " src="picture/new feeder.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2"> Trash Collection System </h3>
                             <p class="mb-0 poppins-new"> This system is a part of the robot that works in taking the trash from sand. This prototype was designed using fusion 360 and printed with bamboo 3d printer.</p>
@@ -113,7 +113,7 @@
             </section>
     </div>
 
-    <div style="background-color:#f7f2c5 ">
+    <div style="background-color:#d1e2e3 ">
             <section class="features-icons text-center">
             <div class="container">
                 <h1 class="big-poppins" style=" padding-bottom: 40px">Initial Designs</h1>
@@ -122,21 +122,21 @@
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <img class="photo-size3" src="picture/old feeder.png" style="padding-bottom: 40px;" />
                             <h4 class="medium-poppins">Feeder</h4>
-                            <p class="poppins-new" style="text-align:justify-all;">This design was picked and modified to weigh less to reduce filament usage. The middle part of the fan was also modified with zip ties to be more elastic</p>
+                            <p class="poppins-new mb-0" style="text-align:justify-all;">This design was picked and modified to weigh less to reduce filament usage. The middle part of the fan was also modified with zip ties to be more elastic</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <img class= "photo-size3" src="picture/scoop.png" style="padding-bottom: 40px;" />
                             <h4 class="medium-poppins">Scoop</h4>
-                            <p class="poppins-new" style="text-align:justify-all;">This design was not used due to limited motor power  </p>
+                            <p class="poppins-new mb-0" style="text-align:justify-all;">This design was not used due to limited motor power  </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <img class="img-fluid photo-page2" src="picture/rotating brush.png" style="padding-bottom: 40px;" />
                             <h4 class="medium-poppins">Rotating Brush </h4>
-                             <p class="poppins-new" style="text-align:justify-all;">The software group handles the movements of the robot by programming its behavior using Arduino. </p>
+                             <p class="poppins-new mb-0" style="text-align:justify-all;">The software group handles the movements of the robot by programming its behavior using Arduino. </p>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last">
-                            <video autoplay muted loop playsinline controls style="width: 100%; height: auto;">
+                            <video autoplay muted loop playsinline controls style="width: 100%; height: auto; padding-bottom: 80px; padding-top: 80px;">
                             <source src="video/video1.mp4" type="video/mp4">
                             </video>
                         </div>
@@ -163,15 +163,14 @@
                 </div>
     </section>
 
-      <div style="background-color: white ;"><
+      <div style="background-color: #779c9e ;"><
     <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
-                    <h1 class=" poppins-thick2 black" style ="padding-bottom: 40px;"> 1. Mechanics </h1>
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6">
-                           <video autoplay muted loop playsinline controls style="width: 100%; height: auto;transform: rotate(90deg);">
-                            <source src="video/video2.mp4" type="video/mp4">
-                            </video> 
+                           <video autoplay muted loop playsinline controls style="width: 100%; max-width: 400px; height: auto; transform: rotate(90deg); margin: 0 auto; display: block;">
+                                 <source src="video/video2.mp4" type="video/mp4">
+                            </video>
                         </div>
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2"> Our Solution </h3>
