--- a/page2.html
+++ b/page2.html
@@ -104,7 +104,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0 my-padding " src="picture/new feeder.jpg" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h3 class="poppins-medium2"> Trash Collection System </h3>
+                            <h3 class="poppins-medium2"> a. Trash Collection System </h3>
                             <p class="mb-0 poppins-new"> This system is a part of the robot that works in taking the trash from sand. This prototype was designed using fusion 360 and printed with bamboo 3d printer.</p>
                         </div>
                     </div>
@@ -155,8 +155,9 @@
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2">Challenges</h3>
                                 <p class="mb-0 poppins-new black">
-                                - Feeder's fins were not long enough or shaped properly to take the trash <br>
-                                -Trash did not go up to the conveyer belt
+                                - Feeder's fins are not long enough or shaped properly to take the trash <br>
+                                -Trash does not go up to the conveyer belt
+                                -Rounded sides due to spinning
                                 </p>
                         </div>
                     </div>
@@ -175,8 +176,9 @@
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2"> Our Solution </h3>
                             <p class="mb-0 poppins-new"> 
-                                - Modified the model of the fins to enable it to be attached with zipties that are flexible and long that allows easier trash collection. <br>
-                                - Modified the rakes to have a bigger scope and attached more 3 rakes in rows of conveyer belt.
+                                - Modifiy the model of the fins to enable it to be attached with zipties that are flexible and long that allows easier trash collection. <br>
+                                - Modify the rakes to have a bigger scope and attach more 3 rakes in rows of conveyer belt.
+                                - The sides are secured with a metal screw mechanism to minimize rounding 
                             </p>
                         </div>
                     </div>
@@ -185,6 +187,114 @@
             </section>
     </div>
 
+     <div style="background-color: white ;"><
+    <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0 my-padding " src="picture/tracks.jpg" alt="..." /></div>
+                        <div class="col-lg-6">
+                            <h3 class="poppins-medium2"> b. Continuous Tracks </h3>
+                            <p class="mb-0 poppins-new"> This system enables the robot's mobility, allowing it to move forward, backward, left, and right. The addition of tracks helps prevent it from sinking into the sand, ensuring smoother movement.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <section class="py-5">
+               <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6 order-first order-lg-last">
+                            <video autoplay muted loop playsinline controls style="width: 100%; height: auto; padding-bottom: 80px; padding-top: 80px;">
+                            <source src="video/video1.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="col-lg-6">
+                            <h3 class="poppins-medium2">Challenges</h3>
+                                <p class="mb-0 poppins-new black">
+                                - Tracks can not connect without long screws <br>
+                                - Wheel keeps slipping off the track <br>
+                                - The tension is too high for the flywheel that is connected to the motor <br>
+                                - The connection from the flywheel to the motor keeps rounding <br>
+                                - The tracks is too heavy for the motor 
+                                </p>
+                        </div>
+                    </div>
+                </div>
+    </section>
+
+       <div style="background-color: #779c9e ;"><
+    <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6">
+                           <video autoplay muted loop playsinline controls style="width: 100%; max-width: 400px; height: auto; transform: rotate(90deg); margin: 0 auto; display: block;">
+                                 <source src="video/video2.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="col-lg-6">
+                            <h3 class="poppins-medium2"> Our Solution </h3>
+                            <p class="mb-0 poppins-new"> 
+                                - Change design of tracks with two screws to connect the pieces <br>
+                                - Extend the design to cover the sides of the track, preventing the wheels from veering off, especially during turns <br>
+                                - Segment the flywheel into multiple pieces and secure them using screws and nuts <br>
+                                - Change the connection to metal to minimize rounding <br>
+                                - Make the design simpler and round the edges <br>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
+    </div>
+
+    <section class="py-5">
+               <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/baloon wheels.jpg" alt="..." />
+                        </div>
+                        <div class="col-lg-6">
+                            <h3 class="poppins-medium2"> c. Baloon Wheels</h3>
+                                <p class="mb-0 poppins-new black">
+                                The concept of the balloon wheels was to be contented with the continuous tracks on what would be the main method of movement for the robot itself. Whilst in development, the wheels were ultimately to be used to be a back up plan in the event that the tracks were to break down in the midst of operation.
+                                </p>
+                        </div>
+                    </div>
+                </div>
+    </section>
+
+     <div style="background-color:#e5f6f7">
+     <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"> <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/baloon wheels2.jpg" alt="..." />
+                        </div>
+                        <div class="col-lg-6">
+                            <p class="mb-0 poppins-new"> 
+                               For the most part, our main challenge was allocating sufficient time for both the robot’s development and its construction. A more specific challenge related to the wheels was the difficulty of implementing the "balloon" aspect due to limited funding. To address this, we attempted to substitute it by incorporating a compliant mechanism into the wheel. Additionally, the balloon wheels group developed a backup plan in case the main robot track system failed.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    </div>
+
+
 </body>
 
+
+
+
+<footer style="background-color: #333; color: white; padding: 20px; text-align: center; margin-top: 20px;">
+            <p style="margin: 0; font-family: 'Poppins', sans-serif;">
+                Connect with us: 
+                <a href="mailto:soar@club.sutd.edu.sg" style="color: #f2f2f2; text-decoration: none; margin-left: 10px;">
+                    soar@club.sutd.edu.sg
+                </a>
+            </p>
+            <a href="https://www.instagram.com/sutdsoar/" target="_blank" style="text-decoration: none; margin-top: 10px; display: inline-block;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 24px; height: 24px; margin-top: 10px;">
+            </a>
+        </footer>
 </html>
