--- a/page3.html
+++ b/page3.html
@@ -120,7 +120,7 @@
             <div class="row padding2" >
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vera1.jpg"/>
                             <h5>Lim Xin En Vera</h5>
                             <p class="font-weight-light mb-0">veralimxe05@gmail.com</p>
                         </div>
