--- a/page2.html
+++ b/page2.html
@@ -267,7 +267,7 @@
      <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"> <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/baloon wheels2.jpg" alt="..." />
+                        <div class="col-lg-6"> <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/baloon wheels2.png" alt="..." />
                         </div>
                         <div class="col-lg-6">
                             <p class="mb-0 poppins-new"> 
