--- a/page2.html
+++ b/page2.html
@@ -191,7 +191,7 @@
     <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0 my-padding " src="picture/tracks.jpg" alt="..." /></div>
+                        <div class="col-lg-6"> <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/Tracks.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2"> b. Continuous Tracks </h3>
                             <p class="mb-0 poppins-new"> This system enables the robot's mobility, allowing it to move forward, backward, left, and right. The addition of tracks helps prevent it from sinking into the sand, ensuring smoother movement.</p>
@@ -216,7 +216,7 @@
                                 - Wheel keeps slipping off the track <br>
                                 - The tension is too high for the flywheel that is connected to the motor <br>
                                 - The connection from the flywheel to the motor keeps rounding <br>
-                                - The tracks is too heavy for the motor 
+                                - The tracks are too heavy for the motor 
                                 </p>
                         </div>
                     </div>
@@ -280,6 +280,20 @@
     </section>
     </div>
 
+    <div style="background-color: white ;"><
+    <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <h1 class=" poppins-thick2 black" style ="padding-bottom: 40px;"> 2. Electronics </h1>
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0 my-padding " src="picture/new feeder.jpg" alt="..." /></div>
+                        <div class="col-lg-6">
+                            <p class="mb-0 poppins-new"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
+    </div>
 
 </body>
 
