--- a/page3.html
+++ b/page3.html
@@ -35,7 +35,7 @@
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
                                 <h1 class="display-5 fw-bolder text-white mb-2 poppins-thick" style="padding-top: 89px;"> Introducing The Team !</h1>
-                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium"> The group consists of 29 people</p>
+                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium"> The group consists of 29 people that made Sand-E Possible</p>
                             </div>
                         </div>
                         <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"></div>
